# object_tracking

./: CMakeLists.txt
Models/: orange_prism.blend  orange_prism.blend1  orange_prism.blend2  orange_prism.ply  orange_tube_holder7.mtl
calibFiles/: DS4calib.yaml  F200Calib.yaml  F200Calib.yaml~  F200Calib_MRPT.yaml  F200Calib_MRPT.yaml~  F200_Calib_MRPT.yaml~  StereoCalib.yaml  StereoCalibManufacturer.yaml  _F200Calib.yaml  _F200Calib.yaml~
include/: background.h  custom_functions.h  visualizer.h
include/obj_recognition/: image_cropper.h  obj_recognition.h  pc_cropper.h
models/: orange_box.ply  orange_prism.ply  orange_tube_holder.blend  orange_tube_holder.blend1  orange_tube_holder2.blend  orange_tube_holder3.blend  orange_tube_holder4.blend  orange_tube_holder4.blend1  orange_tube_holder4.ply  orange_tube_holder5.blend  orange_tube_holder6.blend  orange_tube_holder6.ply  orange_tube_holder7.blend  orange_tube_holder7.blend1  orange_tube_holder7.blend2  orange_tube_holder7.ply~  red_box.ply  yellow_box.ply
src/: background.cpp  custom_functions.cpp  image_cropper.cpp  mi_rendermodel.cpp  obj_recognition.cpp  object_tracking.cpp  rendermodel.cpp  rendermodelPnP.cpp  visualizer.cpp
